基本完成HBase笔记，缺HBase API部分